basic signup page designed which successfully fetches all designation objects