@@ -36,23 +36,21 @@ public class SpringSecurity {
         this.jWTFilter = jwtFilter;
     }
 
-   
-@Bean
-public SecurityFilterChain securityFilterChain(HttpSecurity https) throws Exception {
-    // .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-    https
-        .cors(Customizer.withDefaults())
-        .csrf(AbstractHttpConfigurer::disable)  
-        .authorizeHttpRequests(
-                request -> request.requestMatchers("/login", "/signup").permitAll()
-                        .requestMatchers("/admin/**").hasAuthority("ADMIN")
-                        .anyRequest().authenticated()
-        )
-        .httpBasic(Customizer.withDefaults())
-        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-        .addFilterBefore(jWTFilter, UsernamePasswordAuthenticationFilter.class);
-    return https.build();
-}
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity https) throws Exception {
+        // .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        https
+                .cors(Customizer.withDefaults())
+                .csrf(AbstractHttpConfigurer::disable)
+                .authorizeHttpRequests(
+                        request -> request.requestMatchers("/login", "/signup", "/alldes").permitAll()
+                                .requestMatchers("/admin/**").hasAuthority("ADMIN")
+                                .anyRequest().authenticated())
+                .httpBasic(Customizer.withDefaults())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jWTFilter, UsernamePasswordAuthenticationFilter.class);
+        return https.build();
+    }
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
@@ -68,30 +66,31 @@ public SecurityFilterChain securityFilterChain(HttpSecurity https) throws Except
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource()
-    {
-        CorsConfiguration corsConfiguration=new CorsConfiguration();
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET","PUT","POST","DELETE"));
-        corsConfiguration.setAllowedHeaders(List.of("Authorization","Content-Type"));
-        UrlBasedCorsConfigurationSource source=new UrlBasedCorsConfigurationSource();
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "PUT", "POST", "DELETE"));
+        corsConfiguration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
 
+    // @Bean
+    // public CorsConfigurationSource corsConfigurationSource() {
+    // CorsConfiguration configuration = new CorsConfiguration();
+    // configuration.addAllowedOrigin("http://localhost:5174"); // Add your frontend
+    // URL
+    // configuration.addAllowedMethod("*"); // Allow all HTTP methods (GET, POST,
+    // PUT, etc.)
+    // configuration.addAllowedHeader("*"); // Allow all headers
+    // configuration.setAllowCredentials(true); // Allow credentials (e.g., cookies,
+    // authorization headers)
 
-
-
-//     @Bean
-// public CorsConfigurationSource corsConfigurationSource() {
-//     CorsConfiguration configuration = new CorsConfiguration();
-//     configuration.addAllowedOrigin("http://localhost:5174");  // Add your frontend URL
-//     configuration.addAllowedMethod("*");  // Allow all HTTP methods (GET, POST, PUT, etc.)
-//     configuration.addAllowedHeader("*");  // Allow all headers
-//     configuration.setAllowCredentials(true);  // Allow credentials (e.g., cookies, authorization headers)
-    
-//     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//     source.registerCorsConfiguration("/**", configuration);  // Apply CORS settings globally
-//     return source;
-// }
+    // UrlBasedCorsConfigurationSource source = new
+    // UrlBasedCorsConfigurationSource();
+    // source.registerCorsConfiguration("/**", configuration); // Apply CORS
+    // settings globally
+    // return source;
+    // }
 }
